@@ -1,0 +1,6 @@
+proportions <- read.table("proportions.txt")
+library(ggplot2)
+p <- ggplot(proportions,aes(year,value))+
+  geom_line(aes(groups=disease,colour=disease))
+library(directlabels)
+direct.label(p)
