@@ -1,0 +1,426 @@
+"year" "disease" "value"
+"1" 1947 "diabetes" 0.00598086124401914
+"2" 1942 "diabetes" 0
+"3" 1946 "diabetes" 0
+"4" 1945 "diabetes" 0
+"5" 1944 "diabetes" 0.00613496932515337
+"6" 1943 "diabetes" 0
+"7" 1948 "diabetes" 0.00323549803559048
+"8" 2010 "diabetes" 0.1
+"9" 1941 "diabetes" 0
+"10" 1940 "diabetes" 0.0105263157894737
+"11" 1939 "diabetes" 0
+"12" 1938 "diabetes" 0.0087719298245614
+"13" 1937 "diabetes" 0.0101522842639594
+"14" 1936 "diabetes" 0
+"15" 1935 "diabetes" 0.0050251256281407
+"16" 1934 "diabetes" 0
+"17" 1933 "diabetes" 0.0101522842639594
+"18" 1931 "diabetes" 0
+"19" 1932 "diabetes" 0
+"20" 1930 "diabetes" 0
+"21" 1929 "diabetes" 0
+"22" 1928 "diabetes" 0.00564971751412429
+"23" 1927 "diabetes" 0
+"24" 1926 "diabetes" 0.00588235294117647
+"25" 1911 "diabetes" 0
+"26" 1904 "diabetes" 0
+"27" 1901 "diabetes" 0
+"28" 1903 "diabetes" 0
+"29" 1899 "diabetes" 0
+"30" 1900 "diabetes" 0
+"31" 1895 "diabetes" 0
+"32" 1897 "diabetes" 0
+"33" 1898 "diabetes" 0
+"34" 1907 "diabetes" 0
+"35" 1892 "diabetes" 0
+"36" 1893 "diabetes" 0
+"37" 1906 "diabetes" 0
+"38" 1905 "diabetes" 0
+"39" 1902 "diabetes" 0.0232558139534884
+"40" 1896 "diabetes" 0
+"41" 1894 "diabetes" 0
+"42" 1891 "diabetes" 0
+"43" 1890 "diabetes" 0
+"44" 1889 "diabetes" 0
+"45" 1888 "diabetes" 0
+"46" 1887 "diabetes" 0
+"47" 1885 "diabetes" 0
+"48" 1886 "diabetes" 0
+"49" 1884 "diabetes" 0
+"50" 1883 "diabetes" 0
+"51" 1882 "diabetes" 0
+"52" 1881 "diabetes" 0
+"53" 1879 "diabetes" 0
+"54" 1880 "diabetes" 0
+"55" 1878 "diabetes" 0
+"56" 1876 "diabetes" 0
+"57" 1875 "diabetes" 0
+"58" 1873 "diabetes" 0
+"59" 1910 "diabetes" 0
+"60" 1909 "diabetes" 0.0133333333333333
+"61" 1908 "diabetes" 0.0142857142857143
+"62" 1925 "diabetes" 0.00641025641025641
+"63" 1924 "diabetes" 0
+"64" 1923 "diabetes" 0.00769230769230769
+"65" 1922 "diabetes" 0
+"66" 1921 "diabetes" 0
+"67" 1920 "diabetes" 0.00869565217391304
+"68" 1919 "diabetes" 0
+"69" 1918 "diabetes" 0.00900900900900901
+"70" 1917 "diabetes" 0.00884955752212389
+"71" 1916 "diabetes" 0
+"72" 1915 "diabetes" 0
+"73" 1914 "diabetes" 0
+"74" 1913 "diabetes" 0
+"75" 1912 "diabetes" 0
+"76" 1877 "diabetes" 0
+"77" 1874 "diabetes" 0
+"78" 1872 "diabetes" 0
+"79" 1871 "diabetes" 0
+"80" 1870 "diabetes" 0
+"81" 1869 "diabetes" 0
+"82" 1868 "diabetes" 0
+"83" 1867 "diabetes" 0
+"84" 1866 "diabetes" 0
+"85" 1949 "diabetes" 0.00656215822092599
+"86" 1947 "aids" 0
+"87" 1942 "aids" 0
+"88" 1946 "aids" 0
+"89" 1945 "aids" 0
+"90" 1944 "aids" 0
+"91" 1943 "aids" 0
+"92" 1948 "aids" 0.00161774901779524
+"93" 2010 "aids" 0
+"94" 1941 "aids" 0
+"95" 1940 "aids" 0
+"96" 1939 "aids" 0
+"97" 1938 "aids" 0
+"98" 1937 "aids" 0
+"99" 1936 "aids" 0
+"100" 1935 "aids" 0
+"101" 1934 "aids" 0
+"102" 1933 "aids" 0
+"103" 1931 "aids" 0
+"104" 1932 "aids" 0
+"105" 1930 "aids" 0
+"106" 1929 "aids" 0
+"107" 1928 "aids" 0
+"108" 1927 "aids" 0
+"109" 1926 "aids" 0
+"110" 1911 "aids" 0
+"111" 1904 "aids" 0
+"112" 1901 "aids" 0
+"113" 1903 "aids" 0
+"114" 1899 "aids" 0
+"115" 1900 "aids" 0
+"116" 1895 "aids" 0
+"117" 1897 "aids" 0
+"118" 1898 "aids" 0
+"119" 1907 "aids" 0
+"120" 1892 "aids" 0
+"121" 1893 "aids" 0
+"122" 1906 "aids" 0
+"123" 1905 "aids" 0
+"124" 1902 "aids" 0
+"125" 1896 "aids" 0
+"126" 1894 "aids" 0
+"127" 1891 "aids" 0
+"128" 1890 "aids" 0
+"129" 1889 "aids" 0
+"130" 1888 "aids" 0
+"131" 1887 "aids" 0
+"132" 1885 "aids" 0
+"133" 1886 "aids" 0
+"134" 1884 "aids" 0
+"135" 1883 "aids" 0
+"136" 1882 "aids" 0
+"137" 1881 "aids" 0
+"138" 1879 "aids" 0
+"139" 1880 "aids" 0
+"140" 1878 "aids" 0
+"141" 1876 "aids" 0
+"142" 1875 "aids" 0
+"143" 1873 "aids" 0
+"144" 1910 "aids" 0
+"145" 1909 "aids" 0
+"146" 1908 "aids" 0
+"147" 1925 "aids" 0
+"148" 1924 "aids" 0
+"149" 1923 "aids" 0
+"150" 1922 "aids" 0
+"151" 1921 "aids" 0
+"152" 1920 "aids" 0
+"153" 1919 "aids" 0
+"154" 1918 "aids" 0
+"155" 1917 "aids" 0
+"156" 1916 "aids" 0
+"157" 1915 "aids" 0
+"158" 1914 "aids" 0
+"159" 1913 "aids" 0
+"160" 1912 "aids" 0
+"161" 1877 "aids" 0
+"162" 1874 "aids" 0
+"163" 1872 "aids" 0
+"164" 1871 "aids" 0
+"165" 1870 "aids" 0
+"166" 1869 "aids" 0
+"167" 1868 "aids" 0
+"168" 1867 "aids" 0
+"169" 1866 "aids" 0
+"170" 1949 "aids" 0.001093693036821
+"171" 1947 "tuberculosis" 0.0191387559808612
+"172" 1942 "tuberculosis" 0.00598802395209581
+"173" 1946 "tuberculosis" 0.00606060606060606
+"174" 1945 "tuberculosis" 0.00636942675159236
+"175" 1944 "tuberculosis" 0.0184049079754601
+"176" 1943 "tuberculosis" 0.0180722891566265
+"177" 1948 "tuberculosis" 0.0145597411601572
+"178" 2010 "tuberculosis" 0
+"179" 1941 "tuberculosis" 0.00578034682080925
+"180" 1940 "tuberculosis" 0.0105263157894737
+"181" 1939 "tuberculosis" 0
+"182" 1938 "tuberculosis" 0.0175438596491228
+"183" 1937 "tuberculosis" 0.0050761421319797
+"184" 1936 "tuberculosis" 0.0102564102564103
+"185" 1935 "tuberculosis" 0.0050251256281407
+"186" 1934 "tuberculosis" 0.0102564102564103
+"187" 1933 "tuberculosis" 0.0050761421319797
+"188" 1931 "tuberculosis" 0.00531914893617021
+"189" 1932 "tuberculosis" 0.010989010989011
+"190" 1930 "tuberculosis" 0.00591715976331361
+"191" 1929 "tuberculosis" 0
+"192" 1928 "tuberculosis" 0.00564971751412429
+"193" 1927 "tuberculosis" 0.00568181818181818
+"194" 1926 "tuberculosis" 0.0176470588235294
+"195" 1911 "tuberculosis" 0
+"196" 1904 "tuberculosis" 0.0138888888888889
+"197" 1901 "tuberculosis" 0.0303030303030303
+"198" 1903 "tuberculosis" 0.0158730158730159
+"199" 1899 "tuberculosis" 0
+"200" 1900 "tuberculosis" 0.0384615384615385
+"201" 1895 "tuberculosis" 0
+"202" 1897 "tuberculosis" 0
+"203" 1898 "tuberculosis" 0
+"204" 1907 "tuberculosis" 0.0588235294117647
+"205" 1892 "tuberculosis" 0.0454545454545455
+"206" 1893 "tuberculosis" 0
+"207" 1906 "tuberculosis" 0.0128205128205128
+"208" 1905 "tuberculosis" 0.0352941176470588
+"209" 1902 "tuberculosis" 0
+"210" 1896 "tuberculosis" 0
+"211" 1894 "tuberculosis" 0.0689655172413793
+"212" 1891 "tuberculosis" 0.0476190476190476
+"213" 1890 "tuberculosis" 0
+"214" 1889 "tuberculosis" 0
+"215" 1888 "tuberculosis" 0
+"216" 1887 "tuberculosis" 0
+"217" 1885 "tuberculosis" 0
+"218" 1886 "tuberculosis" 0
+"219" 1884 "tuberculosis" 0
+"220" 1883 "tuberculosis" 0
+"221" 1882 "tuberculosis" 0
+"222" 1881 "tuberculosis" 0
+"223" 1879 "tuberculosis" 0
+"224" 1880 "tuberculosis" 0
+"225" 1878 "tuberculosis" 0
+"226" 1876 "tuberculosis" 0
+"227" 1875 "tuberculosis" 0
+"228" 1873 "tuberculosis" 0
+"229" 1910 "tuberculosis" 0.0294117647058824
+"230" 1909 "tuberculosis" 0.0266666666666667
+"231" 1908 "tuberculosis" 0.0285714285714286
+"232" 1925 "tuberculosis" 0
+"233" 1924 "tuberculosis" 0
+"234" 1923 "tuberculosis" 0
+"235" 1922 "tuberculosis" 0
+"236" 1921 "tuberculosis" 0.00884955752212389
+"237" 1920 "tuberculosis" 0.00869565217391304
+"238" 1919 "tuberculosis" 0
+"239" 1918 "tuberculosis" 0.018018018018018
+"240" 1917 "tuberculosis" 0.00884955752212389
+"241" 1916 "tuberculosis" 0
+"242" 1915 "tuberculosis" 0.0173913043478261
+"243" 1914 "tuberculosis" 0.0114942528735632
+"244" 1913 "tuberculosis" 0.010752688172043
+"245" 1912 "tuberculosis" 0
+"246" 1877 "tuberculosis" 0
+"247" 1874 "tuberculosis" 0
+"248" 1872 "tuberculosis" 0
+"249" 1871 "tuberculosis" 0
+"250" 1870 "tuberculosis" 0
+"251" 1869 "tuberculosis" 0
+"252" 1868 "tuberculosis" 0
+"253" 1867 "tuberculosis" 0
+"254" 1866 "tuberculosis" 0
+"255" 1949 "tuberculosis" 0.014947138169887
+"256" 1947 "tuberculous" 0.00478468899521531
+"257" 1942 "tuberculous" 0
+"258" 1946 "tuberculous" 0
+"259" 1945 "tuberculous" 0
+"260" 1944 "tuberculous" 0
+"261" 1943 "tuberculous" 0
+"262" 1948 "tuberculous" 0.00231107002542177
+"263" 2010 "tuberculous" 0
+"264" 1941 "tuberculous" 0
+"265" 1940 "tuberculous" 0
+"266" 1939 "tuberculous" 0
+"267" 1938 "tuberculous" 0
+"268" 1937 "tuberculous" 0
+"269" 1936 "tuberculous" 0.00512820512820513
+"270" 1935 "tuberculous" 0
+"271" 1934 "tuberculous" 0
+"272" 1933 "tuberculous" 0
+"273" 1931 "tuberculous" 0
+"274" 1932 "tuberculous" 0
+"275" 1930 "tuberculous" 0.00591715976331361
+"276" 1929 "tuberculous" 0
+"277" 1928 "tuberculous" 0
+"278" 1927 "tuberculous" 0.00568181818181818
+"279" 1926 "tuberculous" 0
+"280" 1911 "tuberculous" 0
+"281" 1904 "tuberculous" 0
+"282" 1901 "tuberculous" 0
+"283" 1903 "tuberculous" 0
+"284" 1899 "tuberculous" 0
+"285" 1900 "tuberculous" 0
+"286" 1895 "tuberculous" 0
+"287" 1897 "tuberculous" 0
+"288" 1898 "tuberculous" 0
+"289" 1907 "tuberculous" 0
+"290" 1892 "tuberculous" 0
+"291" 1893 "tuberculous" 0
+"292" 1906 "tuberculous" 0
+"293" 1905 "tuberculous" 0
+"294" 1902 "tuberculous" 0
+"295" 1896 "tuberculous" 0
+"296" 1894 "tuberculous" 0
+"297" 1891 "tuberculous" 0
+"298" 1890 "tuberculous" 0
+"299" 1889 "tuberculous" 0
+"300" 1888 "tuberculous" 0
+"301" 1887 "tuberculous" 0
+"302" 1885 "tuberculous" 0.0476190476190476
+"303" 1886 "tuberculous" 0
+"304" 1884 "tuberculous" 0
+"305" 1883 "tuberculous" 0
+"306" 1882 "tuberculous" 0
+"307" 1881 "tuberculous" 0
+"308" 1879 "tuberculous" 0
+"309" 1880 "tuberculous" 0
+"310" 1878 "tuberculous" 0
+"311" 1876 "tuberculous" 0
+"312" 1875 "tuberculous" 0
+"313" 1873 "tuberculous" 0
+"314" 1910 "tuberculous" 0
+"315" 1909 "tuberculous" 0
+"316" 1908 "tuberculous" 0
+"317" 1925 "tuberculous" 0
+"318" 1924 "tuberculous" 0
+"319" 1923 "tuberculous" 0
+"320" 1922 "tuberculous" 0
+"321" 1921 "tuberculous" 0
+"322" 1920 "tuberculous" 0
+"323" 1919 "tuberculous" 0
+"324" 1918 "tuberculous" 0
+"325" 1917 "tuberculous" 0
+"326" 1916 "tuberculous" 0
+"327" 1915 "tuberculous" 0
+"328" 1914 "tuberculous" 0.0114942528735632
+"329" 1913 "tuberculous" 0
+"330" 1912 "tuberculous" 0
+"331" 1877 "tuberculous" 0
+"332" 1874 "tuberculous" 0
+"333" 1872 "tuberculous" 0
+"334" 1871 "tuberculous" 0
+"335" 1870 "tuberculous" 0
+"336" 1869 "tuberculous" 0
+"337" 1868 "tuberculous" 0
+"338" 1867 "tuberculous" 0
+"339" 1866 "tuberculous" 0
+"340" 1949 "tuberculous" 0.002187386073642
+"341" 1947 "cancer" 0.0155502392344498
+"342" 1942 "cancer" 0
+"343" 1946 "cancer" 0
+"344" 1945 "cancer" 0.00636942675159236
+"345" 1944 "cancer" 0
+"346" 1943 "cancer" 0.0120481927710843
+"347" 1948 "cancer" 0.0159463831754102
+"348" 2010 "cancer" 0
+"349" 1941 "cancer" 0.023121387283237
+"350" 1940 "cancer" 0
+"351" 1939 "cancer" 0.00485436893203883
+"352" 1938 "cancer" 0.0043859649122807
+"353" 1937 "cancer" 0.0050761421319797
+"354" 1936 "cancer" 0.0102564102564103
+"355" 1935 "cancer" 0.0150753768844221
+"356" 1934 "cancer" 0
+"357" 1933 "cancer" 0.0050761421319797
+"358" 1931 "cancer" 0.0106382978723404
+"359" 1932 "cancer" 0
+"360" 1930 "cancer" 0
+"361" 1929 "cancer" 0
+"362" 1928 "cancer" 0.00564971751412429
+"363" 1927 "cancer" 0
+"364" 1926 "cancer" 0.00588235294117647
+"365" 1911 "cancer" 0
+"366" 1904 "cancer" 0.0138888888888889
+"367" 1901 "cancer" 0
+"368" 1903 "cancer" 0
+"369" 1899 "cancer" 0.0606060606060606
+"370" 1900 "cancer" 0
+"371" 1895 "cancer" 0.0333333333333333
+"372" 1897 "cancer" 0.032258064516129
+"373" 1898 "cancer" 0
+"374" 1907 "cancer" 0
+"375" 1892 "cancer" 0
+"376" 1893 "cancer" 0
+"377" 1906 "cancer" 0
+"378" 1905 "cancer" 0
+"379" 1902 "cancer" 0
+"380" 1896 "cancer" 0
+"381" 1894 "cancer" 0
+"382" 1891 "cancer" 0
+"383" 1890 "cancer" 0
+"384" 1889 "cancer" 0
+"385" 1888 "cancer" 0
+"386" 1887 "cancer" 0
+"387" 1885 "cancer" 0
+"388" 1886 "cancer" 0
+"389" 1884 "cancer" 0
+"390" 1883 "cancer" 0
+"391" 1882 "cancer" 0
+"392" 1881 "cancer" 0
+"393" 1879 "cancer" 0
+"394" 1880 "cancer" 0
+"395" 1878 "cancer" 0
+"396" 1876 "cancer" 0
+"397" 1875 "cancer" 0
+"398" 1873 "cancer" 0
+"399" 1910 "cancer" 0
+"400" 1909 "cancer" 0.0266666666666667
+"401" 1908 "cancer" 0.0142857142857143
+"402" 1925 "cancer" 0
+"403" 1924 "cancer" 0.00666666666666667
+"404" 1923 "cancer" 0
+"405" 1922 "cancer" 0.0087719298245614
+"406" 1921 "cancer" 0
+"407" 1920 "cancer" 0
+"408" 1919 "cancer" 0.00884955752212389
+"409" 1918 "cancer" 0
+"410" 1917 "cancer" 0
+"411" 1916 "cancer" 0.00847457627118644
+"412" 1915 "cancer" 0.0347826086956522
+"413" 1914 "cancer" 0.0114942528735632
+"414" 1913 "cancer" 0
+"415" 1912 "cancer" 0.0232558139534884
+"416" 1877 "cancer" 0
+"417" 1874 "cancer" 0
+"418" 1872 "cancer" 0
+"419" 1871 "cancer" 0
+"420" 1870 "cancer" 0
+"421" 1869 "cancer" 0
+"422" 1868 "cancer" 0
+"423" 1867 "cancer" 0
+"424" 1866 "cancer" 0
+"425" 1949 "cancer" 0.00947867298578199
